Adicionando Placeholder nos inputs

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
         </div>
         <h1>Calcule seu IMC</h1>
-        <p class="inputs">Peso:</p>
-        <input type="text" class="inputs" id="peso_usuario">
+        <p class="inputss">Peso:</p>
+        <input type="text" class="inputs" id="peso_usuario" placeholder="exemplo: 60">
 
-        <p class="inputs">Altura:</p>
-        <input type="text" class="inputs" id="altura_usuario">
+        <p class="inputss">Altura:</p>
+        <input type="text" class="inputs" id="altura_usuario" placeholder="exemplo: 1.80">
         <div id="botao">
             <button onclick="recebeDados()">Calcular</button>
         </div>
